--- a/test/.themisrc
+++ b/test/.themisrc
@@ -10,18 +10,21 @@ function! g:t.hooks() abort
   return viler#testutil#Hooks#new()
 endfunction
 
-function! g:t.use_buffers(hooks) abort
+function! g:t.use_buffers(hooks, opts) abort
   let work_dir = tempname()
   call mkdir(work_dir)
   let bufs = viler#testutil#Bufs#new(work_dir)
-  let a:hooks.before_each.setup_bufs = function('s:buf_before_each', [bufs])
+  let a:hooks.before_each.setup_bufs = function('s:buf_before_each', [bufs, get(a:opts, 'auto_add_current_buf', 0)])
   let a:hooks.after_each.cleanup_bufs = function('s:buf_after_each', [bufs])
   let a:hooks.after.rm_work_dir = function('s:buf_after', [bufs])
   return bufs
 endfunction
 
-function! s:buf_before_each(bufs) abort
+function! s:buf_before_each(bufs, auto_add_current_buf) abort
   call a:bufs.reset()
+  if a:auto_add_current_buf
+    call a:bufs.add(bufnr('%'))
+  endif
 endfunction
 
 function! s:buf_after_each(bufs) abort
